Doc/force-app/main/default/objects/Time_Builder_Summary_Metric__c/Time_Builder_Summary_Metric__c.object-meta.xml
<CustomObject>
    <label>Time Builder Summary Metric</label>
    <nameField>
        <displayFormat>TBS-{000000}</displayFormat>
        <label>Time Builder Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Builder Summary Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>