Doc/force-app/main/default/objects/Time_Builder_Summary_Metric__c/fields/Event_Intervals__c.field-meta.xml
<CustomField>
    <fullName>Event_Intervals__c</fullName>
    <label>Event Intervals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>