Doc/force-app/main/default/objects/Time_Builder_Summary_Metric__c/fields/Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Exclusions__c</fullName>
    <label>Exclusions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>