Doc/force-app/main/default/objects/Time_Builder_Summary_Metric__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <label>Posted Date</label>
    <type>DateTime</type>
</CustomField>