Doc/force-app/main/default/objects/Time_Builder_Summary_Metric__c/fields/Recently_Used_Client_Matter_List__c.field-meta.xml
<CustomField>
    <fullName>Recently_Used_Client_Matter_List__c</fullName>
    <label>Recently Used Client/Matter List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>