Doc/force-app/main/default/objects/Time_Builder_Summary_Metric__c/fields/SQL_Server_Version__c.field-meta.xml
<CustomField>
    <fullName>SQL_Server_Version__c</fullName>
    <label>SQL Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>