Doc/force-app/main/default/objects/Time_Builder_Summary_Metric__c/recordTypes/Count.recordType-meta.xml
<RecordType>
    <fullName>Count</fullName>
    <active>true</active>
    <label>Count</label>
</RecordType>